Issue #27870: A left shift of zero by a large integer no longer attempts to allocate large amounts of memory.